--- a/app/views/diaryEntry/index.scala.html
+++ b/app/views/diaryEntry/index.scala.html
@@ -8,7 +8,11 @@
         <h1>
             All Diary Entries
         </h1>
-
+        @for(diaryEntry <- diaryEntrys){
+            <div>
+                <p>@diaryEntry.questions</p>
+            </div>
+        }
         <script src="@routes.Assets.versioned("javascripts/custom.js")"></script>
     </body>
 </html>
