--- a/app/views/diaryEntry/create.scala.html
+++ b/app/views/diaryEntry/create.scala.html
@@ -7,20 +7,14 @@
 <body>
     <h1>@title</h1>
     @form(action = routes.DiaryEntryController.save){
-        @for(question <- diaryEntryForm.get().questions){
-            <div>
-                @if(question.questionType.equalsIgnoreCase("Slider")){
-                    @defining(question.asInstanceOf[SliderQuestion]) { sliderQuestion =>
-                        <input type="range" class="form-control-range" id="@sliderQuestion.id" min="@sliderQuestion.minValue" max="@sliderQuestion.maxValue" value ="@sliderQuestion.defaultValue" onchange="updateSlideValue('@sliderQuestion.id','answer ' + @sliderQuestion.id);">
-                        <span id ="answer @sliderQuestion.id">@sliderQuestion.defaultValue</span>
-                    }
-                }else{
-                    <p>@question.title is not a slider question</p>
-                }
-            </div>
+        @helper.input(diaryEntryForm("stress"), '_label -> "Stress Level") { (id, name, value, args) =>
+            <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','stressSlider');">
+            <span id ="stressSlider">5</span>
         }
+        <p>Where hurts?</p>
+        @checkbox(diaryEntryForm("arms"), '_label -> "Arms")
         <input type ="submit" value = "Submit"/>
     }
-    <script src="@routes.Assets.versioned("javascripts/custom.js")"></script>
+    <script src='@routes.Assets.versioned("javascripts/custom.js")'></script>
 </body>
 </html>
