--- a/app/views/diaryEntry/show.scala.html
+++ b/app/views/diaryEntry/show.scala.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Diary Entry</h1>
-<p>@diaryEntry.id</p>
+<p>@diaryEntry.submittedOn</p>
 <script src="@routes.Assets.versioned("javascripts/custom.js")"></script>
 </body>
 </html>
