--- a/app/views/diaryEntry/show.scala.html
+++ b/app/views/diaryEntry/show.scala.html
@@ -7,6 +7,9 @@
 <body>
 <h1>Diary Entry</h1>
 <p>@diaryEntry.submittedOn</p>
-<script src="@routes.Assets.versioned("javascripts/custom.js")"></script>
+<p>Stress: @diaryEntry.stress</p>
+<p>Mood: @diaryEntry.mood</p>
+<p>Where it hurts:</p>
+<script src="@routes.Assets.versioned("javascript/custom.js")"></script>
 </body>
 </html>
