--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,22 +8,15 @@
 <html lang="@lang().code()">
     <head>
         <title>@title</title>
-
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Play Authenticate - an authentication module for the Play! Framework 2.0">
         <meta name="author" content="The Play Authenticate Team">
-
-        <script type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
-        <script type="text/javascript" src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")"></script>
-        <script type="text/javascript" src="@routes.Application.jsRoutes" defer="defer"></script>
-
         <link rel="stylesheet" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
         <link href="@routes.Assets.versioned("css/main.css")" rel="stylesheet">
     </head>
 
     <body>
-
         <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
             <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -102,5 +95,9 @@
             </footer>
         </div> <!-- /container -->
 
+        <script type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.js")"></script>
+        <script type="text/javascript" src="@routes.Application.jsRoutes" defer="defer"></script>
+        <script src="@routes.Assets.versioned("javascript/custom.js")"></script>
     </body>
 </html>
