--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,17 +9,11 @@
     }else{
         <a class="btn btn-primary" href="@routes.Application.create">New Journal Entry</a>
         @if(admin && !users.isEmpty()){
-            <div class="dropdown">
-                <button onclick="dropdownFunction()" class="dropbtn">Select Athlete</button>
-                <div id="myDropdown" class="dropdown-content">
-                    @for(user <- users){
-                        <a href="#">@user.name , @user.email </a>
-                    }
-                </div>
-            </div>
+            <input type="text" id="searchBox" onkeyup="searchTable()" placeholder="Search for athlete..">
         }
-        <table class="table table-striped">
+<table id="athlete-table" class="table table-striped">
             <tr>
+                <th>Athlete</th>
                 <th>Submitted on</th>
                 <th>Stress</th>
                 <th>Mood</th>
@@ -29,6 +23,7 @@
             </tr>
             @for(diaryEntry <- diaryEntries){
                 <tr>
+                    <td>@diaryEntry.user.name, @diaryEntry.user.email </td>
                     <td><a href="@routes.Application.show(diaryEntry.id)">@diaryEntry.submittedOn</a></td>
                     <td>@diaryEntry.stress</td>
                     <td>@diaryEntry.mood</td>
