--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,13 +21,13 @@
             <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="@routes.Application.index()">Play! Authenticate</a>
+                    <a class="navbar-brand" href="@routes.Application.index()">Coach Monitor</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -84,14 +84,7 @@
             <hr>
 
             <footer>
-                <p>&copy;
-                    2012-2014 Play! Authenticate. Licensed under Apache License, Version 2.0. View details <a href="https://github.com/joscha/play-authenticate/blob/master/LICENSE">
-                        here</a>.</p>
-                <p>
-                    <small>Styles by <a href="http://getbootstrap.com" target="_blank">
-                        Twitter Bootstrap</a> &middot;
-                        Provider icons by <a href="https://github.com/paulrobertlloyd/socialmediaicons/" target="_blank">
-                            Paul Robert Lloyd</a></small></p>
+
             </footer>
         </div> <!-- /container -->
 
