--- a/app/views/show.scala.html
+++ b/app/views/show.scala.html
@@ -2,7 +2,7 @@
 @(userProvider : UserProvider, diaryEntry : DiaryEntry)
 @import helper._
 
-@main(userProvider, Messages("playauthenticate.index.title")){
+@main(userProvider, "Coach Monitor"){
     <h1>Diary Entry</h1>
     <p>@diaryEntry.submittedOn</p>
     <p>Stress: @diaryEntry.stress</p>
