--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,52 +17,45 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-            <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="@routes.Application.index()">Coach Monitor</a>
-                </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="@routes.Application.index()">Coach Monitor</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                @subjectPresentOr(){
                     <ul class="nav navbar-nav">
-                        @subjectPresent(){
-                            <li class="@("active".when(nav == ""))"><a href="@routes.Application.index()">My Journal Entries</a></li>
-                            <li class="@("active".when(nav == ""))"><a href="@routes.Application.create()">New Journal Entry</a></li>
-                        }
-                        @subjectNotPresent() {
-                            <li class="@("active".when(nav == "signup"))"><a href="@routes.Application.signup()">@Messages("playauthenticate.navigation.signup")</a></li>
+                        <li><a href="@routes.Application.index()">My Journal Entries</a></li>
+                        <li><a href="@routes.Application.create()">New Journal Entry</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        @defining(userProvider.getUser(session())) { user =>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> @user.name <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li class="@("active".when(nav == "profile"))"><a href="@routes.Application.profile()">@Messages("playauthenticate.navigation.profile")</a></li>
+
+                                <li class="divider"></li>
+                                <li><a href="@com.feth.play.module.pa.controllers.routes.Authenticate.logout()"><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a></li>
+                            </ul>
+                        </li>
                         }
                     </ul>
+                }{
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="@("active".when(nav == "signup"))"><a href="@routes.Application.signup()">@Messages("playauthenticate.navigation.signup")</a></li>
+                        <li class="@("active".when(nav == "login"))"><a href="@routes.Application.login()">@Messages("playauthenticate.navigation.login")</a></li>
+                    </ul>
+                }
+            </div>
+        </div>
+    </nav>
 
-                    @subjectPresentOr() {
-                        <ul class="nav navbar-nav navbar-right">
-                        @defining(userProvider.getUser(session())) { user =>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> @user.name <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li class="@("active".when(nav == "profile"))"><a href="@routes.Application.profile()">@Messages("playauthenticate.navigation.profile")</a></li>
-
-                                    <li class="divider"></li>
-                                    <li><a href="@com.feth.play.module.pa.controllers.routes.Authenticate.logout()"><i class="icon-off"></i> @Messages("playauthenticate.navigation.logout")</a></li>
-                                </ul>
-                            </li>
-                        }
-                        </ul>
-                    } {
-                        <a href="@routes.Application.login()" class=" navbar-right btn btn-default navbar-btn @("disabled".when(nav == "login"))">@Messages("playauthenticate.navigation.login")</a>
-                    }
-
-                </div><!-- /.navbar-collapse -->
-            </div><!-- /.container-fluid -->
-        </nav>
 
 
         <div class="container-fluid">
