--- a/app/views/_diaryPartial.scala.html
+++ b/app/views/_diaryPartial.scala.html
@@ -10,29 +10,29 @@
     <p>@value</p>
 }
 
-@helper.input(diaryEntryForm("stress"), '_label -> "Stress") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','stressSlider');">
-    <span id ="stressSlider">5</span>
+@helper.input(diaryEntryForm("stress"), '_label -> "Stress Management") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','stressSlider');">
+    <span id ="stressSlider">@value</span>
 }
 
-@helper.input(diaryEntryForm("mood"), '_label -> "Mood") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','moodSlider');">
-    <span id ="moodSlider">5</span>
+@helper.input(diaryEntryForm("mood"), '_label -> "Mood and Energy") { (id, name, value, args) =>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','moodSlider');">
+    <span id ="moodSlider">@value</span>
 }
 
 @helper.input(diaryEntryForm("sleep"), '_label -> "Sleep Quality") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','sleepSlider');">
-    <span id ="sleepSlider">5</span>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','sleepSlider');">
+    <span id ="sleepSlider">@value</span>
 }
 
 @helper.input(diaryEntryForm("muscles"), '_label -> "Muscle Readiness") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','muscleSlider');">
-    <span id ="muscleSlider">5</span>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','muscleSlider');">
+    <span id ="muscleSlider">@value</span>
 }
 
 @helper.input(diaryEntryForm("nutrition"), '_label -> "Yesterday's nutrition") { (id, name, value, args) =>
-    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="5" onchange="updateSlideValue('@id','nutritionSlider');">
-    <span id ="nutritionSlider">5</span>
+    <input type="range" class="form-control-range" id="@id" name="@name" min="1" max="10" value ="@value" onchange="updateSlideValue('@id','nutritionSlider');">
+    <span id ="nutritionSlider">@value</span>
 }
 
 
@@ -47,4 +47,4 @@
 @checkbox(diaryEntryForm("other"), '_label -> "Other")
 @textarea(diaryEntryForm("comment"), '_label -> "Additional Comments")
 
-<input type ="submit" value = "Submit"/>
+<input type ="submit" class = "btn btn-primary" value = "Submit"/>
