--- a/app/views/account/signup/email/verify_email_en.scala.html
+++ b/app/views/account/signup/email/verify_email_en.scala.html
@@ -1,14 +1,14 @@
 @(verificationUrl: String, token: String, name: String, email: String)
-Howdy @name,
+Hi @name,
 <br />
 <br />
 <p>
-	You recently signed up for PlayAuthenticate.<br />
+	You recently signed up for Coach Monitor.<br />
 	<br />
 	Follow this link to <a href="@verificationUrl">activate your account</a> now.
 </p>
 <br />
 <p>
-	Cheers,<br /> 
-	<i>The PlayAuthenticate Team</i>
+	Thanks,<br />
+	<i>Coach Monitor Team</i>
 </p>
