--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,8 +10,8 @@
         <title>@title</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Play Authenticate - an authentication module for the Play! Framework 2.0">
-        <meta name="author" content="The Play Authenticate Team">
+        <meta name="description" content="Coach Monitor">
+        <meta name="author" content="Alan Byrne">
         <link rel="stylesheet" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")">
         <link href="@routes.Assets.versioned("css/main.css")" rel="stylesheet">
     </head>
