--- a/app/views/mobileIndex.scala.html
+++ b/app/views/mobileIndex.scala.html
@@ -6,7 +6,78 @@
         <p>Oops, you don't have any diary entries yet, please submit one <a href="@routes.Application.create">here</a>.
         </p>
     }else{
-        <p>mobile device!</p>
+@if(admin && !users.isEmpty()){
+<input type="text" id="searchBoxMobile" onkeyup="searchTable()" placeholder="Search athletes...">
+}
+@for(diaryEntry <- diaryEntries){
+<table id="athlete-table" class="table table-bordered table-hover table-condensed table-responsive">
+    <th colspan="2">
+        @diaryEntry.user.name, @diaryEntry.submittedOn <small>(@diaryEntry.user.email)</small>
+    </th>
+
+
+    <tr>
+        <td>Sore Body Parts</td>
+        <td>
+            @if(diaryEntry.arms){Arms}
+            @if(diaryEntry.legs){Legs}
+            @if(diaryEntry.back){Back}
+            @if(diaryEntry.chest){Chest}
+            @if(diaryEntry.feet){Feet}
+            @if(diaryEntry.neck){Neck}
+            @if(diaryEntry.shoulder){Shoulder}
+            @if(diaryEntry.other){Other}
+
+        </td>
+    </tr>
+    <tr>
+        <td>Athlete's Comment</td>
+        <td>@diaryEntry.comment</td>
+    </tr>
+    <tr>
+        <td>Stress Management</td>
+        <td class="colourCell align-middle">@diaryEntry.stress</td>
+    </tr>
+    <tr>
+        <td>Mood/Energy</td>
+        <td class="colourCell align-middle">@diaryEntry.mood</td>
+    </tr>
+    <tr>
+        <td>Sleep Quality</td>
+        <td class="colourCell align-middle">@diaryEntry.sleep</td>
+    </tr>
+    <tr>
+        <td>Muscle Readiness</td>
+        <td class="colourCell align-middle">@diaryEntry.muscles</td>
+    </tr>
+    <tr>
+        <td>Yesterday's nutrition</td>
+        <td class="colourCell align-middle">@diaryEntry.nutrition</td>
+    </tr>
+
+
+    <tr>
+        <td colspan="2">
+        <a href="@routes.Application.edit(diaryEntry.id)">
+            <span class="glyphicon glyphicon-edit"></span>
+        </a>
+        <a onclick="del('@routes.Application.delete(diaryEntry.id)')">
+            <span class="glyphicon glyphicon-remove"></span>
+        </a>
+        </td>
+    </tr>
+</table>
+}
+@if(totalPages > 1){
+<div class="pagination">
+    @if(pageNo > 1){<a href="@routes.Application.index(1)">&laquo;</a>}
+    @for(pageCount <- 1 to totalPages){
+    <a href="@routes.Application.index(pageCount)">@pageCount</a>
     }
+
+    <a href="@routes.Application.index(totalPages)">&raquo;</a>
+</div>
+}
+}
 }
 
