--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,19 @@ h1 {
     margin-bottom: 12px; /* Add some space below the input */
  }
 
+ #searchBoxMobile{
+     background-image: url('searchicon.png'); /* Add a search icon to input */
+     background-position: 10px 12px; /* Position the search icon */
+     background-repeat: no-repeat; /* Do not repeat the icon image */
+     background-size: 20px;
+     float:right;
+     width: 100%; /* Full-width */
+     font-size: 16px; /* Increase font-size */
+     padding: 12px 20px 12px 40px; /* Add some padding */
+     border: 1px solid #ddd; /* Add a grey border */
+     margin-bottom: 12px; /* Add some space below the input */
+  }
+
 .example-date {
     position: relative;
     padding: 22px 5px 0px;
